Refactor error states and add custom error messages

--- a/Frontend Mentor/Intro Component/index.html
+++ b/Frontend Mentor/Intro Component/index.html
@@ -26,25 +26,25 @@
           <div class="input-field">
             <input type="text" id="firstname" name="firstname" placeholder="First Name" required >
             <label for="firstname">First Name</label>
-            <div class="error-msg">First Name cannot be empty</div>
+            <div class="error-msg"></div> 
           </div>  
 
           <div class="input-field">
             <input type="text" id="lastname" name="lastname" placeholder=" Last Name" required >
             <label for="lastname">Last Name</label>
-            <div class="error-msg">Last Name cannot be empty</div>
+            <div class="error-msg"></div>
           </div>  
 
           <div class="input-field">
             <input type="email" id="email" name="email" placeholder="Email Address" required >
             <label for="email">Email</label>
-            <div class="error-msg">Looks like this is not an email</div>
+            <div class="error-msg"></div>
           </div>  
         
           <div class="input-field">
             <input type="password" id="password" name="password" placeholder="Password" required >
             <label for="password">Password</label>
-            <div class="error-msg">Password cannot be empty</div>
+            <div class="error-msg"></div>
           </div>  
 
           <input type="submit" value="Claim your free trial">
