Add mobile styling

--- a/Frontend Mentor/Clipboard Landing Page/index.html
+++ b/Frontend Mentor/Clipboard Landing Page/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="./style.css">
   
   <title>Frontend Mentor | Clipboard Landing Page</title>
 
@@ -18,8 +19,8 @@
       <p>Clipboard allows you to track and organize everything you 
       copy. Instantly access your clipboard on all your devices.</p>
 
-      <a href="#" class="ios-download-btn">Download for iOS</a>
-      <a href="#" class="mac-download-btn">Download for Mac</a>
+      <a href="#" class="ios download-btn">Download for iOS</a>
+      <a href="#" class="mac download-btn">Download for Mac</a>
     </section>
 
     <section class="intro">
@@ -31,7 +32,7 @@
     </section>
 
     <section class="features">
-      <img src="./img/image-computer.png" alt="Computer">
+     <img src="./img/image-computer.png" alt="Computer">
 
       <div class="feature">
         <h3>Quick Search</h3>
@@ -49,13 +50,13 @@
       </div>
     </section>
 
-    <section class="">
+    <section class="devices">
       <h2>Access Clipboard anywhere</h2>
 
       <p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
       snippets in a few simple clicks.</p>
 
-      <img src="./img/image-devices.png" alt="Devices">
+    <img src="./img/image-devices.png" alt="Devices">
     </section>
 
     <section class="tools">
@@ -96,8 +97,8 @@
       <p>Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
       and you’re ready to start adding to your clipboard.</p>
 
-      <a href="#" class="ios-download-btn">Download for iOS</a>
-      <a href="#" class="mac-download-btn">Download for Mac</a>
+      <a href="#" class="ios download-btn">Download for iOS</a>
+      <a href="#" class="mac download-btn">Download for Mac</a>
     </section>
     
   </main>
@@ -112,6 +113,12 @@
       <li><a href="#">Press Kit</a></li>
       <li><a href="#">Install Guide</a></li> 
     </ul>
+
+    <div class="social-media-icons">
+      <img src="./img/icon-facebook.svg" alt="Facebook">
+      <img src="./img/icon-twitter.svg" alt="Twitter">
+      <img src="./img/icon-instagram.svg" alt="Instagram">
+    </div>
 
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
