Add desktop styling

--- a/Frontend Mentor/Clipboard Landing Page/index.html
+++ b/Frontend Mentor/Clipboard Landing Page/index.html
@@ -34,19 +34,21 @@
     <section class="features">
      <img src="./img/image-computer.png" alt="Computer">
 
-      <div class="feature">
-        <h3>Quick Search</h3>
-        <p>Easily search your snippets by content, category, web address, application, and more.</p>
-      </div>
+     <div class="feature-list">
+        <div class="feature">
+          <h3>Quick Search</h3>
+          <p>Easily search your snippets by content, category, web address, application, and more.</p>
+        </div>
 
-      <div class="feature">
-        <h3>iCloud Sync</h3>
-        <p>Instantly saves and syncs snippets across all your devices.</p>
-      </div>  
+        <div class="feature">
+          <h3>iCloud Sync</h3>
+          <p>Instantly saves and syncs snippets across all your devices.</p>
+        </div>  
 
-      <div class="feature">
-        <h3>Complete History</h3>
-        <p>Retrieve any snippets from the first moment you started using the app.</p>
+        <div class="feature">
+          <h3>Complete History</h3>
+          <p>Retrieve any snippets from the first moment you started using the app.</p>
+        </div>
       </div>
     </section>
 
@@ -63,7 +65,7 @@
       <h2>Supercharge your workflow</h2>
 
       <p>We’ve got the tools to boost your productivity.</p>
-      <div class="tools">
+      <div class="tool-list">
         <div class="tool">
           <img src="./img/icon-blacklist.svg" alt="Blacklist">
           <h3>Create blacklists</h3>
