--- a/Frontend Mentor/News Homepage/index.html
+++ b/Frontend Mentor/News Homepage/index.html
@@ -11,46 +11,83 @@
 </head>
 
 <body>
+  <main>
+    <div id="navbar-main">
+      <div id="logo">
+        <img src="./assets/img/logo.svg" alt="w logo">
+      </div> 
+      <nav>
+        <ul>
+          <li><a href="#" target="_blank">Home</a></li>
+          <li><a href="#" target="_blank">New</a></li>
+          <li><a href="#" target="_blank">Popular</a></li>
+          <li><a href="#" target="_blank">Trending</a></li>
+          <li><a href="#" target="_blank">Categories</a></li>
+        </ul>
+      </nav>
+    </div>
 
-  Home
-  New
-  Popular
-  Trending
-  Categories
+    <section id="hero">
+      <img id="hero-img" src="/assets/img/image-web-3-mobile.jpg" alt="web 3 hero image">
+        <h1>The Bright Future of Web 3.0?</h1>
 
-  The Bright Future of Web 3.0?
+        <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+        But is it really fulfilling its promise?</p>
 
-  We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-  But is it really fulfilling its promise?
+        <button><a href="#" target="_blank">Read more</a></button>
+    </section>
 
-  Read more
+    <section id="new-articles-list">
+      <h2>New</h2> 
 
-  New 
+      <ul class="articles-list">
+        <li class="article">
+          <div class="article-title">Hydrogen VS Electric Cars</div>
+          <div class="article-blurb">Will hydrogen-fueled cars ever catch up to EVs?</div>
+        </li>
 
-  Hydrogen VS Electric Cars
-  Will hydrogen-fueled cars ever catch up to EVs?
+        <li class="article">
+          <div class="article-title">The Downsides of AI Artistry</div>
+          <div class="article-blurb">What are the possible adverse effects of on-demand AI image generation?</div>
+        </li>
 
-  The Downsides of AI Artistry
-  What are the possible adverse effects of on-demand AI image generation?
+        <li class="article">
+          <div class="article-title">Is VC Funding Drying Up?</div>
+          <div class="article-blurb">Private funding by VC firms is down 50% YOY. We take a look at what that means.</div>
+        </li>
+      </ul>
+    </section>
 
-  Is VC Funding Drying Up?
-  Private funding by VC firms is down 50% YOY. We take a look at what that means.
+    <section id="featured-articles">
+      <div class="article">
+        <img src="/assets/img/image-retro-pcs.jpg" alt="retro pcs">
+        <div class="article-number">01</div>
+        <div class="article-title">Reviving Retro PCs</div>
+        <div class="article-blurb">What happens when old PCs are given modern upgrades?</div> 
+      </div>
 
-  01
-  Reviving Retro PCs
-  What happens when old PCs are given modern upgrades?
+      <div class="article">
+        <img src="/assets/img/image-top-laptops.jpg" alt="laptops">
+        <div class="article-number">02</div>
+        <div class="article-title">Top 10 Laptops of 2022</div>
+        <div class="article-blurb">Our best picks for various needs and budgets.</div>
+      </div>
 
-  02
-  Top 10 Laptops of 2022
-  Our best picks for various needs and budgets.
+      <div class="article">
+        <img src="/assets/img/image-gaming-growth.jpg" alt="gaming">
+        <div class="article-number">03</div>
+        <div class="article-title">The Growth of Gaming</div>
+        <div class="article-blurb">How the pandemic has sparked fresh opportunities.</div>
+      </div>
+    </section>
+    
+    <footer>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://github.com/alexvalpeter" target="_blank">Alex Peterson</a>.
+      </div>
+    </footer>  
 
-  03
-  The Growth of Gaming
-  How the pandemic has sparked fresh opportunities.
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/alexvalpeter" target="_blank">Alex Peterson</a>.
-  </div>
+  </main>
 </body>
 </html>
