--- a/Frontend Mentor/News Homepage/index.html
+++ b/Frontend Mentor/News Homepage/index.html
@@ -5,27 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="/style.css">
   
   <title>Frontend Mentor | News Homepage</title>
 </head>
 
 <body>
+
+  
+  
+  <header>
+    
+    <img id="logo" src="./assets/img/logo.svg" alt="w logo">
+
+    <input id="mobile-hamburger-icon" type="checkbox" aria-label="Display menu toggle">
+    <div id="dark-overlay"></div>
+
+    <nav>
+      <ul>
+        <li><a href="#" target="_blank">Home</a></li>
+        <li><a href="#" target="_blank">New</a></li>
+        <li><a href="#" target="_blank">Popular</a></li>
+        <li><a href="#" target="_blank">Trending</a></li>
+        <li><a href="#" target="_blank">Categories</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
   <main>
-    <div id="navbar-main">
-      <div id="logo">
-        <img src="./assets/img/logo.svg" alt="w logo">
-      </div> 
-      <nav>
-        <ul>
-          <li><a href="#" target="_blank">Home</a></li>
-          <li><a href="#" target="_blank">New</a></li>
-          <li><a href="#" target="_blank">Popular</a></li>
-          <li><a href="#" target="_blank">Trending</a></li>
-          <li><a href="#" target="_blank">Categories</a></li>
-        </ul>
-      </nav>
-    </div>
 
     <section id="hero">
       <img id="hero-img" src="/assets/img/image-web-3-mobile.jpg" alt="web 3 hero image">
@@ -43,17 +51,17 @@
       <ul class="articles-list">
         <li class="article">
           <div class="article-title">Hydrogen VS Electric Cars</div>
-          <div class="article-blurb">Will hydrogen-fueled cars ever catch up to EVs?</div>
+          <p class="article-blurb">Will hydrogen-fueled cars ever catch up to EVs?</p>
         </li>
 
         <li class="article">
           <div class="article-title">The Downsides of AI Artistry</div>
-          <div class="article-blurb">What are the possible adverse effects of on-demand AI image generation?</div>
+          <p class="article-blurb">What are the possible adverse effects of on-demand AI image generation?</p>
         </li>
 
         <li class="article">
           <div class="article-title">Is VC Funding Drying Up?</div>
-          <div class="article-blurb">Private funding by VC firms is down 50% YOY. We take a look at what that means.</div>
+          <p class="article-blurb">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
         </li>
       </ul>
     </section>
@@ -61,23 +69,32 @@
     <section id="featured-articles">
       <div class="article">
         <img src="/assets/img/image-retro-pcs.jpg" alt="retro pcs">
-        <div class="article-number">01</div>
-        <div class="article-title">Reviving Retro PCs</div>
-        <div class="article-blurb">What happens when old PCs are given modern upgrades?</div> 
+
+        <div class="article-info">
+          <div class="article-number">01</div>
+          <div class="article-title">Reviving Retro PCs</div>
+          <p class="article-blurb">What happens when old PCs are given modern upgrades?</p> 
+        </div>
       </div>
 
       <div class="article">
         <img src="/assets/img/image-top-laptops.jpg" alt="laptops">
-        <div class="article-number">02</div>
-        <div class="article-title">Top 10 Laptops of 2022</div>
-        <div class="article-blurb">Our best picks for various needs and budgets.</div>
+
+        <div class="article-info">
+          <div class="article-number">02</div>
+          <div class="article-title">Top 10 Laptops of 2022</div>
+          <p class="article-blurb">Our best picks for various needs and budgets.</p>
+        </div>
       </div>
 
       <div class="article">
         <img src="/assets/img/image-gaming-growth.jpg" alt="gaming">
-        <div class="article-number">03</div>
-        <div class="article-title">The Growth of Gaming</div>
-        <div class="article-blurb">How the pandemic has sparked fresh opportunities.</div>
+
+        <div class="article-info">
+          <div class="article-number">03</div>
+          <div class="article-title">The Growth of Gaming</div>
+          <p class="article-blurb">How the pandemic has sparked fresh opportunities.</p>
+        </div>
       </div>
     </section>
     
@@ -90,4 +107,5 @@
 
   </main>
 </body>
+
 </html>
