--- a/Frontend Mentor/News Homepage/index.html
+++ b/Frontend Mentor/News Homepage/index.html
@@ -12,8 +12,6 @@
 
 <body>
 
-  
-  
   <header>
     
     <img id="logo" src="./assets/img/logo.svg" alt="w logo">
@@ -34,37 +32,43 @@
   </header>
 
   <main>
+    <div id="primary-container">
+      <section id="hero">
+        <!--<img id="hero-img" src="/assets/img/image-web-3-mobile.jpg" alt="web 3 hero image">-->
+        <div id="hero-img"></div>
+        <div id="hero-txt-container">
+          <h1>The Bright Future of Web 3.0?</h1>
 
-    <section id="hero">
-      <img id="hero-img" src="/assets/img/image-web-3-mobile.jpg" alt="web 3 hero image">
-        <h1>The Bright Future of Web 3.0?</h1>
+          <div id="hero-blurb">
+            <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
+              But is it really fulfilling its promise?</p>
 
-        <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
-        But is it really fulfilling its promise?</p>
+            <button><a href="#" target="_blank">Read more</a></button>
+          </div>
+        </div>
+      </section>
 
-        <button><a href="#" target="_blank">Read more</a></button>
-    </section>
+      <section id="new-articles-list">
+        <h2>New</h2> 
 
-    <section id="new-articles-list">
-      <h2>New</h2> 
+        <ul class="articles-list">
+          <li class="article">
+            <div class="article-title">Hydrogen VS Electric Cars</div>
+            <p class="article-blurb">Will hydrogen-fueled cars ever catch up to EVs?</p>
+          </li>
 
-      <ul class="articles-list">
-        <li class="article">
-          <div class="article-title">Hydrogen VS Electric Cars</div>
-          <p class="article-blurb">Will hydrogen-fueled cars ever catch up to EVs?</p>
-        </li>
+          <li class="article">
+            <div class="article-title">The Downsides of AI Artistry</div>
+            <p class="article-blurb">What are the possible adverse effects of on-demand AI image generation?</p>
+          </li>
 
-        <li class="article">
-          <div class="article-title">The Downsides of AI Artistry</div>
-          <p class="article-blurb">What are the possible adverse effects of on-demand AI image generation?</p>
-        </li>
-
-        <li class="article">
-          <div class="article-title">Is VC Funding Drying Up?</div>
-          <p class="article-blurb">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
-        </li>
-      </ul>
-    </section>
+          <li class="article">
+            <div class="article-title">Is VC Funding Drying Up?</div>
+            <p class="article-blurb">Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+          </li>
+        </ul>
+      </section>
+    </div>
 
     <section id="featured-articles">
       <div class="article">
