--- a/Frontend Mentor/Contact Form/index.html
+++ b/Frontend Mentor/Contact Form/index.html
@@ -8,42 +8,68 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
   
   <title>Frontend Mentor | Contact Form</title>
-
-
 </head>
+
 <body>
+  <main>
+    <form id="form-container" method="POST">
+      <h1>Contact Us</h1>
 
-  Contact Us
+      <div class="field">
+        <label for="firstname">First Name</label>
+        <input type="text" name="firstname" id="firstname" required>
+        <div class="validation-msg">This field is required</div>
+      </div>
 
-  First Name
-  This field is required
+      <div class="field">
+        <label for="lastname">Last Name</label>
+        <input type="text" name="lastname" id="lastname" required>
+        <div class="validation-msg">This field is required</div>
+      </div>
 
-  Last Name
-  This field is required
+      <div class="field">
+        <label for="email">Email Address</label>
+        <input type="text" name="email" id="email" required>
+        <div class="validation-msg">This field is required</div>
+      </div>
 
-  Email Address
-  Please enter a valid email address
-  This field is required
+      <fieldset>
+        <legend>Query Type</legend>
+        <div class="field">
+          <input type="radio" id="general" name="query-type" value="general">
+          <label for="general">General Enquiry</label>
+          <input type="radio" id="support" name="query-type" value="support">
+          <label for="Support">Support Enquiry</label>
+          <div class="validation-msg">Please select a query type</div>
+        </div>
+      </fieldset>
+    
+      <div class="field">
+        <label for="message">Message</label>
+        <input type="text" name="message" id="message" required>
+        <div class="validation-msg">This field is required</div>
+      </div>
 
-  Query Type
-  General Enquiry
-  Support Request
-  Please select a query type
+      <div class="field">
+        <input type="checkbox" id="consent" name="consent" value="consent" required>
+        <label for="consent">I consent to being contacted by the team</label>
+        <div class="validation-msg">To submit this form, please consent to being contacted</div>
+      </div>
 
-  Message
-  This field is required
+      <input type="submit" value="Submit">
 
-  I consent to being contacted by the team
-  To submit this form, please consent to being contacted
 
-  Submit
 
-  Message Sent!
-  Thanks for completing the form. We'll be in touch soon!
-  
-  <div class="attribution">
+      <div id="success-msg">
+        Message Sent!
+        Thanks for completing the form. We'll be in touch soon!
+      </div>
+    </form>
+  </main>
+
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/alexvalpeter">Alex Peterson</a>.
-  </div>
+  </footer>
 </body>
 </html>
