Add desktop styling

--- a/Frontend Mentor/Contact Form/index.html
+++ b/Frontend Mentor/Contact Form/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="field bordered input-label-group">  
               <input type="radio" id="support" name="query-type" value="support" required>
-              <label for="Support">Support Enquiry</label>
+              <label for="support">Support Enquiry</label>
             </div>  
           </div>
           <div class="error-msg">Please select a query type</div>
